// Vitest Snapshot v1

exports[`RecipesList > should render 1`] = `
"<div class=\\"title is-4\\" data-v-2a5a893a=\\"\\"> Rezepte
  <!--v-if--><a href=\\"/wordcloud\\" class=\\"wordcloud-toggle\\" data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-magnifying-glass mdi-24px\\"></i></span></a>
</div>
<!--v-if-->
<ul class=\\"recipes-list\\" data-v-2a5a893a=\\"\\">
  <li data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-utensils mdi-24px\\"></i></span> dish 1 <a href=\\"#\\" class=\\"favorite\\" title=\\"Zur Favoritenliste hinzufügen\\" data-v-4723bbcc=\\"\\" data-v-2a5a893a=\\"\\">☆</a></li>
  <li data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-utensils mdi-24px\\"></i></span> dish 2 <a href=\\"#\\" class=\\"favorite\\" title=\\"Von der Favoritenliste entfernen\\" data-v-4723bbcc=\\"\\" data-v-2a5a893a=\\"\\">★</a></li>
</ul>"
`;

exports[`RecipesList > should render a message when there are no items in list 1`] = `
"<div class=\\"title is-4\\" data-v-2a5a893a=\\"\\"> Rezepte
  <!--v-if--><a href=\\"/wordcloud\\" class=\\"wordcloud-toggle\\" data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-magnifying-glass mdi-24px\\"></i></span></a>
</div>
<!--v-if-->
<div data-v-2a5a893a=\\"\\">Keine Rezepte gefunden</div>"
`;

exports[`RecipesList > should render favorites 1`] = `
"<div class=\\"title is-4\\" data-v-2a5a893a=\\"\\"> Rezepte
  <!--v-if--><a href=\\"/wordcloud\\" class=\\"wordcloud-toggle\\" data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-magnifying-glass mdi-24px\\"></i></span></a>
</div>
<!--v-if-->
<ul class=\\"recipes-list\\" data-v-2a5a893a=\\"\\">
  <li data-v-2a5a893a=\\"\\"><span class=\\"o-icon\\" data-v-2a5a893a=\\"\\"><i class=\\"mdi mdi-utensils mdi-24px\\"></i></span> dish 2 <a href=\\"#\\" class=\\"favorite\\" title=\\"Von der Favoritenliste entfernen\\" data-v-4723bbcc=\\"\\" data-v-2a5a893a=\\"\\">★</a></li>
</ul>"
`;
